fixed bug with white space at the bottom of navigation

--- a/gaming_store-starter/css/navigation_style.css
+++ b/gaming_store-starter/css/navigation_style.css
@@ -10,6 +10,7 @@
     position: relative;
     display:grid;
     grid-template-columns: 150px 1fr;
+    overflow: hidden;
 }
 
 
